# iot-os

./: .gitignore  MODULES_CONFIG.md  README.md  generate_iot_luac.py  xmake.lua
adapters/: iot_types.h
adapters/ml307n/: iot_adc.c  iot_adc.h  iot_at.c  iot_at.h  iot_audio.c  iot_audio.h  iot_ble.h  iot_camera.c  iot_camera.h  iot_fota.c  iot_fota.h  iot_fs.c  iot_fs.h  iot_gpio.c  iot_gpio.h  iot_http.c  iot_http.h  iot_i2c.c  iot_i2c.h  iot_i2s.h  iot_log.h  iot_mem.c  iot_mem.h  iot_ntp.c  iot_ntp.h  iot_os.c  iot_os.h  iot_ota.c  iot_ota.h  iot_pm.c  iot_pm.h  iot_pwm.c  iot_pwm.h  iot_rtc.c  iot_rtc.h  iot_sim.c  iot_sim.h  iot_sms.c  iot_sms.h  iot_socket.c  (+11 more)
adapters/yopen/: iot_adc.h  iot_at.c  iot_at.h  iot_audio.c  iot_audio.h  iot_ble.h  iot_camera.h  iot_fota.h  iot_fs.h  iot_gnss.h  iot_gpio.c  iot_gpio.h  iot_http.h  iot_i2c.h  iot_i2s.h  iot_log.h  iot_mem.h  iot_ntp.h  iot_os.h  iot_ota.h  iot_pm.c  iot_pm.h  iot_pwm.h  iot_rtc.c  iot_rtc.h  iot_sim.h  iot_sms.h  iot_socket.c  iot_socket.h  iot_spi.c  iot_spi.h  iot_sys.h  iot_tts.h  iot_uart.c  iot_uart.h  iot_wifi.h
algorithms/: a_star.lua  d_star.lua  dijkstra.lua  position_pid.lua  rrt.lua  theta_star.lua
app/: iot.lua  main.lua
app/tests/: common.lua  run_all.lua  run_one.lua  test_http.lua  test_lvgl.lua  test_modbus.lua  test_mqtt.lua  test_net.lua  test_uart.lua  test_zlib.lua
base/: autoload.lua  boot.lua  class.lua  configs.lua  settings.lua  utils.lua  watcher.lua
components/: button.lua  fan.lua  led.lua  relay.lua  servo.lua  speeder.lua  stepper.lua  switch.lua
components/fonts/: font_builtin.h  font_engine.c  font_vector.h
components/net/: CMakeLists.txt  lua_module.c
components/yaml/: yaml.c  yaml.h
components/zlib/: adapter.h  deflate.h  gzip.c  tar.c  tar.h  zip.c
core/: _.lua  autoload.lua  configs.lua  database.lua  iot.luac  iot.luac.h  iot_base.h  iot_callback.c  iot_callback.h  iot_log.c  iot_log.h  iot_modules.c  iot_modules.h  iot_pack.c  iot_params.c  iot_params.h  iot_queue.c  iot_rtos.c  iot_task.c  iot_task.h  iot_wdt.c  iot_wdt.h  kv.lua  led.lua  logging.lua  model.lua  settings.lua  xmake.lua
drivers/: CMakeLists.txt  drivers.c  drivers.h  xmake.lua
drivers/ads1115/: ads1115.c  ads1115.h
drivers/bh1750/: bh1750.c  bh1750.h
drivers/bme280/: bme280.c  bme280.h
drivers/buzzer/: buzzer.c  buzzer.h
drivers/dht/: dht.c  dht.h
drivers/ds18b20/: ds18b20.c  ds18b20.h
drivers/hmc5883l/: hmc5883l.c  hmc5883l.h
drivers/lcd1602/: lcd1602.c  lcd1602.h
drivers/led/: led.c  led.h
drivers/mpu6050/: mpu6050.c  mpu6050.h
drivers/pcf8574/: pcf8574.c  pcf8574.h
drivers/relay/: relay.c  relay.h
drivers/ssd1306/: ssd1306.c  ssd1306.h
filter/: complementary.lua  iir.lua  kalman.lua  median.lua
filters/: ekf.lua  ma.lua
gateway/: README.md  binary.lua  device.lua  devices.lua  gateway.lua  link.lua  links.lua  model.lua  points.lua  protocol.lua  protocols.lua
hmi/: taojingchi.lua
io/: inputs.lua  outputs.lua
iot/: iot_base.h  iot_base64.c  iot_base64.h  iot_callback.c  iot_event.c  iot_event.h  iot_font.c  iot_font.h  iot_gmssl.c  iot_jpeg.c  iot_jpeg.h  iot_list.h  iot_log.c  iot_log.h  iot_modules.c  iot_pack.c  iot_pack.h  iot_params.c  iot_queue.c  iot_queue.h  iot_rtos.c  iot_rtos.h  iot_sqlite3.c  iot_sqlite3.h  iot_task.c  iot_task.h  iot_u8g2.c  iot_yaml.c  iot_zlib.c  xmake.lua
link/: agent.lua  serial.lua
links/: agent.lua  serial.lua  tcp_client.lua  udp_client.lua
lua/: README.md
lvgl/: lvgl_anim.c  lvgl_bar.c  lvgl_constants.c  lvgl_list.c  lvgl_slider.c  lvgl_spinner.c  lvgl_table.c  lvgl_timer.c
master/: actions.lua  master.lua
misc/: commands.lua  increment_pid.lua
modules/: lm_adc.c  lm_adc.h  lm_at.c  lm_at.h  lm_audio.c  lm_audio.h  lm_audio_stub.c  lm_base64.c  lm_camera.h  lm_cpu.c  lm_cpu.h  lm_flash.c  lm_flash.h  lm_fota.c  lm_fota.h  lm_fs.c  lm_fs.h  lm_gmssl.h  lm_gnss.h  lm_gpio.c  lm_gpio.h  lm_http.c  lm_http.h  lm_i2c.c  lm_i2c.h  lm_i2c_stub.c  lm_json.c  lm_json.h  lm_lcd.c  lm_lcd.h  lm_log.c  lm_log.h  lm_lwm2m.c  lm_lwm2m.h  lm_mem.c  lm_mem.h  lm_mobile.c  lm_mobile.h  lm_mqtt.c  lm_mqtt.h  (+35 more)
modules/crypto/: CMakeLists.txt  crypto.c  crypto.h  crypto_module.c  xmake.lua
modules/fonts/: font_data.c  font_data.h  font_engine.h  font_external.c  font_external.h  font_vector.c  iot_fonts.h  xmake.lua
modules/fs/: CMakeLists.txt  fs_dir.c  fs_dir.h  fs_module.c  fs_path.c  fs_path.h  xmake.lua
modules/http/: CMakeLists.txt  http.c  http.h  http_client.c  http_client.h  http_form.c  http_form.h  http_gzip.c  http_gzip.h  http_manager.c  http_manager.h  http_module.c  http_server.c  http_server.h  http_url.c  http_url.h  xmake.lua
modules/lvgl/: lvgl.c  lvgl.h  lvgl_anim.c  lvgl_arc.c  lvgl_bar.c  lvgl_btn.c  lvgl_calendar.c  lvgl_canvas.c  lvgl_chart.c  lvgl_checkbox.c  lvgl_color.c  lvgl_colorwheel.c  lvgl_constants.c  lvgl_disp.c  lvgl_dropdown.c  lvgl_font.c  lvgl_fs.c  lvgl_group.c  lvgl_img.c  lvgl_indev.c  (+26 more)
modules/mqtt/: CMakeLists.txt  mqtt_client.c  mqtt_client.h  mqtt_event.c  mqtt_event.h  mqtt_keepalive.c  mqtt_keepalive.h  mqtt_manager.c  mqtt_manager.h  mqtt_module.c  mqtt_packets.c  mqtt_packets.h  mqtt_publisher.c  mqtt_publisher.h  xmake.lua
modules/url/: CMakeLists.txt  url.c  url.h  url_module.c
navigator/: map.lua
opencpu/: cmsis_os2.h  xmake.lua
protocols/: cjt188.lua  modbus.lua
robot/: README.md  components.lua  cron.lua  fan.lua  fsm.lua  planner.lua  program.lua  relay.lua  robot.lua  runtime.lua  servo.lua  speeder.lua  state_machine.lua  stepper.lua  vm.lua
scene/: scene.lua  scenes.lua
script/: generate_iot.luac.sh  iot.lua  iot.luac  iot.luac.h
sensor/: lidar.lua  limits.lua
ui/: tjc.lua
(+128 files in other folders)
